--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+derive_more = { version = "1.0.0", features = ["from", "error", "display", "into"] }
+rkyv = {version = "0.7.45", features = ["uuid"]}
+scc = "2.1.16"
