--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ derive_more = { version = "1.0.0", features = ["from", "error", "display", "into
 rkyv = { version = "0.7", features = ["uuid"] }
 scc = "2.1.16"
 lockfree = "0.5.1"
+serde = { version = "1.0.215", features = ["derive"] }
