finalise Cargo.toml's

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ members = ["codegen"]
 name = "data_bucket"
 version = "0.1.0"
 edition = "2021"
+authors = ["Handy-caT"]
+license = "MIT"
+repository = "https://github.com/pathscale/DataBucket"
+description = "DataBucket is container for WorkTable"
 
 [dependencies]
-data_bucket_derive = {path = "codegen"}
+data_bucket_derive = {path = "codegen" , version = "0.1.0"}
 
 eyre = "0.6.12"
 derive_more = { version = "1.0.0", features = ["from", "error", "display", "into"] }
