--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -2,6 +2,10 @@
 name = "data_bucket_derive"
 version = "0.1.0"
 edition = "2021"
+authors = ["Handy-caT"]
+license = "MIT"
+repository = "https://github.com/pathscale/DataBucket"
+description = "DataBucket is container for WorkTable"
 
 [lib]
 name = "data_bucket_codegen"
