--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,12 @@ members = ["codegen"]
 
 [package]
 name = "data_bucket"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Handy-caT"]
 license = "MIT"
 repository = "https://github.com/pathscale/DataBucket"
-description = "DataBucket is container for WorkTable"
+description = "DataBucket is container for WorkTable's data"
 
 [dependencies]
 data_bucket_derive = {path = "codegen" , version = "0.1.0"}
@@ -18,6 +18,4 @@ derive_more = { version = "1.0.0", features = ["from", "error", "display", "into
 rkyv = { version = "0.8.9", features = ["uuid-1"]}
 scc = "2.1.16"
 lockfree = "0.5.1"
-serde = { version = "1.0.215", features = ["derive"] }
 uuid = { version = "1.11.0", features = ["v4"] }
-bitcode = "0.6.3"
