Add two CLI tools for creating data files and dumping the content of a data file to stdout (#7)
* Add CLI tools `create-data-file` and `dump-data-file`

* Extend README

* Implement reading of multiple pages

* Add `pages-count` paramter to `create-data-file`

* Add `dump-data-file` program

* Rebase on top of the `main` branch

* Document `--pages-count` command line flag

* Fix creation of the data file in `create-data-file`

* Add `--page-content` flag to `create-data-file`

* Document the location of the command line tools

* Fix typos

* Clarify the purpose of the project

* Fix a compiler warning

* Fix imports

* Restore the `load_pages` function

* Add `row_schema` field to `SpaceInfo`

* WIP reading of fields

* Store column data types as strings

* Rename `secondary_index_map` to `secondary_index_types`

* Add a function that reads arbitrary archived structs

* Support more types and correct padding in `parse_archived_row` function

* Make code more DRY

* Support `f64` and `f32` data types

* Make usage of commas in the match arms more consistent

* Rename the test for `parse_archived_row`

* Add `primary_key_type` field

* Change `primary_key_type` to `primary_key_fields` in `SpaceInfo`

* Fix `test_as_bytes` test

* Storea and read vectors of index records in index pages

* WIP reading of data pages

* An implementation of reading rows from the database

* corrections

* Implement `DataType` for numerical types

* Support all data types

* Run `cargo fmt`

* Remove unused imports

* Start implementing a test for reading row data

* Create a mock database for `test_read_table_data` test

* Read vectors of `IndexValue` instead of vectors of `IndexData`

* Make `test_read_table_data` test pass

* Run `cargo fmt`

* Add `parse_data_page` function

* Use `read_data_pages` function to read the rows

* Support more primary key data types

* Make intervals closed

* Fix a 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["codegen"]
+members = ["codegen", "tools/create-data-file", "tools/dump-data-file"]
 
 [package]
 name = "data_bucket"
@@ -18,4 +18,9 @@ derive_more = { version = "1.0.0", features = ["from", "error", "display", "into
 rkyv = { version = "0.8.9", features = ["uuid-1"]}
 scc = "2.1.16"
 lockfree = "0.5.1"
+serde = { version = "1.0.215", features = ["derive"] }
 uuid = { version = "1.11.0", features = ["v4"] }
+bitcode = "0.6.3"
+
+[dev-dependencies]
+mktemp = "0.4.0"
