--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ rkyv = { version = "0.8.9", features = ["uuid-1"] }
 lockfree = "0.5.1"
 uuid = { version = "1.11.0", features = ["v4"] }
 indexset = { version = "0.11.2", features = ["concurrent", "cdc", "multimap"] }
+tokio = { version = "1", features = ["full"] }
