--- a/tools/create-data-file/Cargo.toml
+++ b/tools/create-data-file/Cargo.toml
@@ -8,4 +8,6 @@ clap = { version = "4.5.21", features = ["derive"] }
 data_bucket = { path = "../.." }
 eyre = "0.6.12"
 rkyv = { version = "0.8.9", features = ["uuid-1"]}
+tokio = { version = "1", features = ["full"] }
+
 
