--- a/tools/dump-data-file/Cargo.toml
+++ b/tools/dump-data-file/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 clap = { version = "4.5.21", features = ["derive"] }
 data_bucket = { path = "../.." }
 eyre = "0.6.12"
+tokio = { version = "1", features = ["full"] }
+
