--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["codegen", "tools/create-data-file", "tools/dump-data-file"]
 
 [package]
 name = "data_bucket"
-version = "0.2.7"
+version = "0.2.8"
 edition = "2021"
 authors = ["Handy-caT"]
 license = "MIT"
@@ -19,7 +19,7 @@ rkyv = { version = "0.8.9", features = ["uuid-1"] }
 lockfree = "0.5.1"
 uuid = { version = "1.11.0", features = ["v4"] }
 ordered-float = "5.0.0"
-indexset = { version = "0.12.3", features = ["concurrent", "cdc", "multimap"] }
-# indexset = { path = "../indexset", version = "0.12.2", features = ["concurrent", "cdc", "multimap"] }
-# indexset = { git = "https://github.com/Handy-caT/indexset", branch = "multimap-range-fix", version = "0.12.0", features = ["concurrent", "cdc", "multimap"] }
+# indexset = { version = "0.12.3", features = ["concurrent", "cdc", "multimap"] }
+# indexset = { path = "../indexset", version = "0.12.3", features = ["concurrent", "cdc", "multimap"] }
+indexset = { package = "wt-indexset", version = "0.12.4", features = ["concurrent", "cdc", "multimap"] }
 tokio = { version = "1", features = ["full"] }
