--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -24,4 +24,4 @@ convert_case = "0.6.0"
 derive_more = { version = "1.0.0", features = ["from", "error", "display", "into"] }
 rkyv = { version = "0.7.45", features = ["uuid"] }
 scc = "2.1.16"
-lockfree = "0.5.1"
+lock_freedom = "0.1"
